Added pwd step to dev container.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,5 @@
         "quantum.quantum-devkit-vscode",
         "ms-vscode.csharp"
     ],
-    "postCreateCommand": "/bin/bash ./post-build.sh"
+    "postCreateCommand": "pwd && /bin/bash ./post-build.sh"
 }
